# HeatEquation

./: CMakeLists.txt  README.md
src/: main.cpp
src/grid/: CMakeLists.txt  grid.cpp  grid.h
src/params/: CMakeLists.txt  params.cpp  params.h
